tests/comp/sem/invalid/void_parameter.mj
class A {

	public void foo(/*** void x ***/){
	}

	public static void main(String[] args) {
	}

}
